--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+Results/Manual_Check/*.json
+Results/Verified/*.json
+Results/cr_analysis_list.txt
